--- a/main_system/templates/main/story1.html
+++ b/main_system/templates/main/story1.html
@@ -5,7 +5,7 @@
 <div class="container py-5">
     <nav aria-label="breadcrumb" class="mb-4">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/home/">Home</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
             <li class="breadcrumb-item active" aria-current="page">The Art of Traditional Hand Weaving</li>
         </ol>
     </nav>
@@ -123,7 +123,7 @@
                             </a>
                         </li>
                         <li class="mb-3">
-                            <a href="/story/3/" class="text-decoration-none text-dark">
+                            <a href="{% url 'story3' %}"class="text-decoration-none text-dark">
                                 <div class="d-flex align-items-center">
                                     <img src="/media/story_picture/story3_pic50.jpg" alt="Traditional Woodcarving and Modern Home Decor" class="me-2" style="width: 50px; height: 50px; object-fit: cover;">
                                     <div>
