--- a/main_system/templates/main/story_detail.html
+++ b/main_system/templates/main/story_detail.html
@@ -5,7 +5,7 @@
 <div class="container py-5">
     <nav aria-label="breadcrumb" class="mb-4">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/home/">Home</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
             <li class="breadcrumb-item active" aria-current="page">{{ story.title }}</li>
         </ol>
     </nav>
