--- a/main_system/templates/wallet/card_add.html
+++ b/main_system/templates/wallet/card_add.html
@@ -18,7 +18,7 @@
                 <div class="card-body p-4">
                     <div class="d-flex justify-content-between align-items-center mb-4">
                         <h4 class="mb-0">Add Payment Card</h4>
-                        <a href="/customer/wallet/cards/" class="btn btn-outline-secondary">
+                        <a href="{% url 'payment_card_list' %}" class="btn btn-outline-secondary">
                             <i class="fas fa-arrow-left me-2"></i>Back to List
                         </a>
                     </div>
