--- a/main_system/templates/wallet/payment_card.html
+++ b/main_system/templates/wallet/payment_card.html
@@ -10,10 +10,10 @@
                     <div class="d-flex justify-content-between align-items-center mb-4">
                         <h4 class="mb-0">My Payment Cards</h4>
                         <div>
-                            <a href="/customer/wallet/cards/add/" class="btn btn-primary me-2">
+                            <a href="{% url 'payment_card_add' %}" class="btn btn-primary me-2">
                                 <i class="fas fa-plus me-2"></i>Add New Card
                             </a>
-                            <a href="/customer/wallet/" class="btn btn-outline-secondary">
+                            <a href="{% url 'wallet_view' %}" class="btn btn-outline-secondary">
                                 <i class="fas fa-arrow-left me-2"></i>Back to Wallet
                             </a>
                         </div>
@@ -65,7 +65,7 @@
                     <div class="text-center text-muted py-5">
                         <i class="fas fa-credit-card fa-3x mb-3"></i>
                         <p class="mb-4">You have not added any payment cards yet</p>
-                        <a href="/customer/wallet/cards/add/" class="btn btn-primary">
+                        <a href="{% url 'payment_card_add' %}" class="btn btn-primary">
                             <i class="fas fa-plus me-2"></i>Add Payment Card
                         </a>
                     </div>
