--- a/main_system/templates/wallet/top_up.html
+++ b/main_system/templates/wallet/top_up.html
@@ -9,7 +9,7 @@
                 <div class="card-body p-4">
                     <div class="d-flex justify-content-between align-items-center mb-4">
                         <h4 class="mb-0">Wallet Top-Up</h4>
-                        <a href="/customer/wallet/" class="btn btn-outline-secondary">
+                        <a href="{% url 'wallet_view' %}" class="btn btn-outline-secondary">
                             <i class="fas fa-arrow-left me-2"></i>Back to Wallet
                         </a>
                     </div>
@@ -64,7 +64,7 @@
                             <div class="alert alert-warning mb-0">
                                 <i class="fas fa-exclamation-triangle me-2"></i>
                                 You have not added any payment cards, please add first
-                                <a href="/customer/wallet/cards/add/" class="alert-link">add a payment card</a>
+                                <a href="{% url 'payment_card_add' %}" class="alert-link">add a payment card</a>
                             </div>
                             {% endif %}
                         </div>
