--- a/main_system/templates/wallet/transactions.html
+++ b/main_system/templates/wallet/transactions.html
@@ -9,7 +9,7 @@
                 <div class="card-body p-4">
                     <div class="d-flex justify-content-between align-items-center mb-4">
                         <h4 class="mb-0">Transaction Records</h4>
-                        <a href="/customer/wallet/" class="btn btn-outline-secondary">
+                        <a href="{% url 'wallet_view' %}" class="btn btn-outline-secondary">
                             <i class="fas fa-arrow-left me-2"></i>Back to Wallet
                         </a>
                     </div>
